<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F1F1"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp">

            <ImageView
                android:id="@+id/profile_img"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@mipmap/profile_pp"
                android:layout_alignParentStart="true"
                />
            <TextView
                android:id="@+id/dashboard_txt"
                android:text="@string/app_name"
                android:fontFamily="cursive"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/account_name_txt"
                android:layout_width="wrap_content"
                android:fontFamily="sans-serif"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/dashboard_txt"
                android:text="my name"
                android:textColor="@color/secondaryText"
                android:textSize="12sp" />

        </RelativeLayout>

        <GridLayout
            android:layout_marginTop="24dp"
            android:columnOrderPreserved="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:rowCount="3"
            android:columnCount="3">

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="32dp">

                <LinearLayout
                    android:background="#F1F1F1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:elevation="@dimen/cardview_default_elevation"
                        android:id="@+id/groceries_btn"
                        android:src="@mipmap/store_ic"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />
                    <TextView
                        android:fontFamily="sans-serif-condensed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/secondaryText"
                        android:text="@string/groceries_txt"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="32dp">

                <LinearLayout
                    android:background="#F1F1F1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/plane_ticket_btn"
                        android:src="@mipmap/flight_ic"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:fontFamily="sans-serif-condensed"
                        android:textColor="@color/secondaryText"
                        android:text="@string/plane_txt"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="32dp">

                <LinearLayout
                    android:background="#F1F1F1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/electricity_btn"
                        android:src="@mipmap/electric_ic"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/secondaryText"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/electicity_txt"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="32dp">

                <LinearLayout
                    android:background="#F1F1F1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/movie_ticket_btn"
                        android:src="@mipmap/movie_ic"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:fontFamily="sans-serif-condensed"
                        android:textColor="@color/secondaryText"
                        android:text="@string/movie_txt"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="32dp">

                <LinearLayout
                    android:background="#F1F1F1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/train_ticket_btn"
                        android:src="@mipmap/train_ic"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/secondaryText"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/train_txt"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="32dp">

                <LinearLayout
                    android:background="#F1F1F1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/book_restaurant_btn"
                        android:src="@mipmap/restaurant_ic"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/secondaryText"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/restaurant_txt"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="32dp">

                <LinearLayout
                    android:background="#F1F1F1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/book_hotel_btn"
                        android:src="@mipmap/hotel_ic"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/secondaryText"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/hotel_txt"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="32dp">

                <LinearLayout
                    android:background="#F1F1F1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/game_voucher_btn"
                        android:src="@mipmap/game_ic"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/secondaryText"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/game_voucher_txt"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="32dp">

                <LinearLayout
                    android:background="#F1F1F1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/smartphone_btn"
                        android:src="@mipmap/internet_ic"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/secondaryText"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/smartphone_txt"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="32dp">

                <LinearLayout
                    android:background="#F1F1F1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/other_services_btn"
                        android:src="@mipmap/other_ic"
                        android:layout_width="80dp"
                        android:layout_height="80dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/secondaryText"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/other_txt"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>



        </GridLayout>

    </LinearLayout>

</ScrollView>